--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "name": "Python: Module",
+            "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "module": "enter-your-module-name",
+            "program": "${file}",
+            "console": "integratedTerminal",
             "justMyCode": true
         }
     ]
