--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["MSFT", "1m", "[('ta.trend.VortexIndicator', 2, [14])]", "1d"]
+            "args": ["MSFT", "1d", "[]", "1y", "False", "False", "False", "True", "True"]
         }
     ]
 }
