--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["MSFT", "1d", "[('ta.momentum.pvo', 2, [12, 26, 9])]", "1y", "False", "False", "False", "True"]
+            "args": ["BTC-USD", "5m", "[('ta.momentum.pvo', 2, [12, 26, 9])]", "1d", "False", "False", "False", "True"]
         }
     ]
 }
