--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,7 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
+        sudo apt-get install python3-opencv
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-qt PyQt5 PyQt6 PySide2 PySide6
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
