--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        sudo apt-get install python3-opencv
+        apt-get update && apt-get install libgl1
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-qt PyQt5 PyQt6 PySide2 PySide6
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
