--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,6 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install -y libgl1-mesa-dev
+        sudo apt install libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 x11-utils
+        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-qt PyQt5 PyQt6 PySide2 PySide6 yahooquery
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
