--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
           architecture: 'x64'
       - name: Install requirements
         run: |
+          pip install pygame
           pip install -r requirements.txt
       - name: Run PyInstaller
         run: |
