--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,18 @@ matplotlib==3.6.2
 mplfinance==0.12.9b7
 numpy==1.23.5
 pandas==1.5.2
+pygame==2.4.0
 PySide6==6.5.0
-PySide6_Addons==6.5.0
-PySide6_Essentials==6.5.0
+PySide6_Addons==6.4.1
+PySide6_Essentials==6.4.1
 pytest_qt==4.2.0
 Requests==2.31.0
 scipy==1.10.1
 selenium==4.9.1
+site==packages
 ta==0.10.2
 TA_Lib==0.4.24
-tensorflow==2.11.0
-tensorflow_intel==2.11.0
+tensorflow==2.12.0
+tensorflow_intel==2.12.0
 yahooquery==2.3.1
 yfinance==0.2.18
