--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
           sudo make install
           cd ./..
           pip install pygame
+          pip install tensorflow
           pip install -r requirements.txt
       - name: Run PyInstaller
         run: |
