--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
           cd ./..
           pip install pygame
           pip install tensorflow
+          pip install tensorflow_intel
           pip install -r requirements.txt
       - name: Run PyInstaller
         run: |
