--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
-          asset_path: dist/yftest.exe
+          asset_path: dist/yftest
           asset_name: Qwiklab-Badge-Checker-Windows-amd64.exe
           asset_content_type: application/zip
