--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,5 +54,5 @@ jobs:
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
           asset_path: dist/yftest
-          asset_name: Qwiklab-Badge-Checker-Windows-amd64.exe
+          asset_name: Qwiklab-Badge-Checker-Windows-amd64
           asset_content_type: application/zip
