--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -22,4 +22,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
             name: windows-build
-            path: build/yftest/yftest
+            path: build/yftest
