--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -3,7 +3,7 @@ name: windows build
 on:
   push:
 jobs:
-  build-windows:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -23,3 +23,26 @@ jobs:
         with:
             name: windows-build
             path: dist/yftest
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup Conda
+        uses: s-weigand/setup-conda@v1
+      - name: Install TA-Lib
+        run: |
+          conda install -c conda-forge ta-lib
+      - name: Run PyInstaller
+        run: |
+          pip install pyinstaller
+          pip install Pillow
+          python -m PyInstaller yftest.spec
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+            name: windows-build
+            path: dist/yftest.exe
+      
+        
+      
