--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -48,6 +48,8 @@ jobs:
         with:
             name: windows-build
             path: dist/yftest.exe
+      - name: Sanity Check
+        run: echo ${{ github.ref }}
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
