--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -48,11 +48,9 @@ jobs:
         with:
             name: windows-build
             path: dist/yftest.exe
-      - name: Sanity Check
-        run: echo ${{ github.ref }}
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/heads/')
         with:
           files: |
             yftest
