--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -53,12 +53,10 @@ jobs:
         if: startsWith(github.ref, 'refs/heads/')
         with:
           tag_name: ${{ github.event.head_commit.message }}
-          release_name: ${{ github.event.head_commit.message }}
           draft: false
           prerelease: false
-          overwrite: true
           files: |
             yftest
-            yftest.exe
+            dist/yftest.exe
         
       
