--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Assemble Linux Build
         run: |
           cp -R assets dependencies fonts icons splashscreen-images dist
-          zip linux-build.zip dist
+          zip -r linux-build.zip dist
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
