--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           pip install pyinstaller
           pip install Pillow
+          pip install -r requirements.txt
           python -m PyInstaller yftest.spec
       - name: Assemble Windows Build
         run: |
