--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -44,7 +44,8 @@ jobs:
           conda install -c conda-forge ta-lib
       - name: Run PyInstaller
         run: |
-          pip install pyinstaller
+          conda install -c conda-forge pyinstaller pandas
+          
           pip install Pillow
           pip install -r requirements.txt
           python -m PyInstaller yftest.spec
