--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -44,10 +44,10 @@ jobs:
           conda install -c conda-forge ta-lib
       - name: Run PyInstaller
         run: |
-          conda install -c conda-forge pyinstaller pandas
+          conda install -c conda-forge pyinstaller
+          conda install --file requirements.txt
           
           pip install Pillow
-          pip install -r requirements.txt
           python -m PyInstaller yftest.spec
       - name: Assemble Windows Build
         run: |
