--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -44,8 +44,7 @@ jobs:
           conda install -c conda-forge ta-lib
       - name: Run PyInstaller
         run: |
-          conda install -c conda-forge pyinstaller
-          conda install -c conda-forge --file requirements.txt
+          conda install -c conda-forge pyinstaller beautifulsoup4 holidays lxml matplotlib mplfinance numpy pandas pygame pyside6 requests scipy selenium ta tensorflow yfinance
           
           pip install Pillow
           python -m PyInstaller yftest.spec
