--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Run PyInstaller
         run: |
           conda install -c conda-forge pyinstaller pandas pyside6
+          python -m pip install yahooquery
           pip install Pillow
           python -m PyInstaller yftest.spec
       - name: Assemble Windows Build
