--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -44,7 +44,7 @@ jobs:
           conda install -c conda-forge ta-lib
       - name: Run PyInstaller
         run: |
-          conda install -c conda-forge pyinstaller pandas pyside6
+          conda install -c conda-forge pyinstaller pandas pyside6 holidays
           python -m pip install yahooquery
           pip install Pillow
           python -m PyInstaller yftest.spec
