--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -47,7 +47,7 @@ jobs:
           conda install -c conda-forge pyinstaller pandas pyside6 holidays beautifulsoup4
           python -m pip install yahooquery holidays PySide6-Addons PySide6-Essentials
           pip install Pillow
-          python -m PyInstaller yftest.spec
+          python -m PyInstaller --add-data "c:/miniconda/lib/site-packages/PySide6/plugins;PySide6/plugins/" --onefile --noconsole --icon=wsb.jpg yftest.py
       - name: Assemble Windows Build
         run: |
           Copy-Item -Path "assets" -Destination "dist" -Recurse
