--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -44,8 +44,8 @@ jobs:
           conda install -c conda-forge ta-lib
       - name: Run PyInstaller
         run: |
-          conda install -c conda-forge pyinstaller pandas pyside6 holidays beautifulsoup4
-          python -m pip install yahooquery holidays PySide6-Addons PySide6-Essentials
+          conda install -c conda-forge pyinstaller pandas holidays beautifulsoup4
+          python -m pip install yahooquery holidays PySide6 PySide6-Addons PySide6-Essentials
           pip install Pillow
           python -m PyInstaller --add-data "c:/miniconda/lib/site-packages/PySide6/plugins;PySide6/plugins/" --onefile --noconsole --icon=wsb.jpg yftest.py
       - name: Assemble Windows Build
