--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -44,7 +44,8 @@ jobs:
           conda install -c conda-forge ta-lib
       - name: Run PyInstaller
         run: |
-          conda install --upgrade Pillow
+          conda uninstall Pillow
+          python -m pip install Pillow
           conda install -c conda-forge pyinstaller pandas holidays beautifulsoup4 scipy tensorflow matplotlib mplfinance
           python -m pip install yahooquery holidays PySide6 PySide6-Addons PySide6-Essentials
           
