--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,91 @@
-PySide6~=6.5.1.1
-pandas~=2.0.2
-requests~=2.31.0
-lxml~=4.9.2
-numpy~=1.24.3
-yahooquery~=2.3.1
+absl-py==1.4.0
+appdirs==1.4.4
+astunparse==1.6.3
+async-generator==1.10
+attrs==23.1.0
+beautifulsoup4==4.12.2
+bs4==0.0.1
+cachetools==5.3.1
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+colorama==0.4.6
+contourpy==1.1.0
+cryptography==41.0.1
+cycler==0.11.0
+exceptiongroup==1.1.1
+flatbuffers==23.5.26
+fonttools==4.40.0
+frozendict==2.3.8
+gast==0.4.0
+google-auth==2.20.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.54.2
+h11==0.14.0
+h5py==3.8.0
+holidays==0.26
+html5lib==1.1
+idna==3.4
+jax==0.4.12
+keras==2.12.0
+kiwisolver==1.4.4
+libclang==16.0.0
+lxml==4.9.2
+Markdown==3.4.3
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+ml-dtypes==0.2.0
+mplfinance==0.12.9b7
+multitasking==0.0.11
+numpy==1.23.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+outcome==1.2.0
+packaging==23.1
+pandas==2.0.2
+Pillow==9.5.0
+protobuf==4.23.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pygame==2.4.0
+pyparsing==3.0.9
+PySide6==6.5.1.1
+PySide6-Addons==6.5.1.1
+PySide6-Essentials==6.5.1.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.31.0
+requests-futures==1.0.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scipy==1.10.1
+selenium==4.10.0
+shiboken6==6.5.1.1
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+ta==0.10.2
+TA-Lib==0.4.26
+tensorboard==2.12.3
+tensorboard-data-server==0.7.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+tqdm==4.65.0
+trio==0.22.0
+trio-websocket==0.10.3
+typing_extensions==4.6.3
+tzdata==2023.3
+urllib3==1.26.16
+webencodings==0.5.1
+Werkzeug==2.3.6
+wrapt==1.14.1
+wsproto==1.2.0
+yahooquery==2.3.1
+yfinance==0.2.20
