--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -20,7 +20,7 @@ jobs:
           python -m PyInstaller yftest.spec
       - name: Assemble Linux Build
         run: |
-          cp -R assets dependencies fonts icons splashscreen-images dist
+          cp -R assets fonts icons splashscreen-images dist
           zip -r linux-build.zip dist
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
@@ -51,7 +51,6 @@ jobs:
       - name: Assemble Windows Build
         run: |
           Copy-Item -Path "assets" -Destination "dist" -Recurse
-          Copy-Item -Path "dependencies" -Destination "dist" -Recurse
           Copy-Item -Path "fonts" -Destination "dist" -Recurse
           Copy-Item -Path "icons" -Destination "dist" -Recurse
           Copy-Item -Path "splashscreen-images" -Destination "dist" -Recurse
