--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -44,7 +44,7 @@ jobs:
           conda install -c conda-forge ta-lib
       - name: Run PyInstaller
         run: |
-          conda install -c conda-forge pyinstaller pandas holidays beautifulsoup4 scipy tensorflow 
+          conda install -c conda-forge pyinstaller pandas holidays beautifulsoup4 scipy tensorflow ta
           python -m pip install matplotlib mplfinance yahooquery holidays PySide6 PySide6-Addons PySide6-Essentials pygame
           
           python -m PyInstaller --hidden-import talib.stream --add-data "c:/miniconda/lib/site-packages/PySide6/plugins;PySide6/plugins/" --onefile --noconsole --icon=wsb.jpg yftest.py
